@@ -1,4 +1,4 @@
-set hive.partition.pruning=strict;
+set hive.mapred.mode=strict;
 
 EXPLAIN
 SELECT count(1) FROM srcPART;
