@@ -1,0 +1,4 @@
+EXPLAIN
+SELECT *  FROM src src1 JOIN src src2 WHERE src1.key < 10 and src2.key < 10;
+
+SELECT *  FROM src src1 JOIN src src2 WHERE src1.key < 10 and src2.key < 10;
